--- a/tox.ini
+++ b/tox.ini
@@ -15,5 +15,6 @@ deps =
     17: Django >= 1.7, < 1.8
     18: Django >= 1.8, < 1.9
     19: Django >= 1.9, < 1.10
+    20: Django >= 1.10
     master: https://github.com/django/django/tarball/master#egg=Django
     -r{toxinidir}/requirements/tests.txt
